--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,105 +1,132 @@
 nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #026aa7;
-    padding: 10px 20px;
-    position: fixed;
-    width: 100%;
-    top: 0;
-    left: 0;
-    z-index: 1000;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    transition: background-color 0.3s ease-in-out;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #026aa7;
+  padding: 10px 20px;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s ease-in-out;
+}
+
+nav.scrolled {
+  background-color: #024a7f;
+}
+
+.logo {
+  flex: 1;
+  margin-right: 10px;
+  text-align: left;
+}
+
+.logo h1 {
+  color: #fff;
+  font-size: 2em;
+  font-weight: bold;
+  margin: 0;
+  transition: transform 0.3s ease-in-out;
+  animation: fadeIn 2s ease-in-out, bounce 2s ease-in-out infinite alternate;
+}
+
+.nav-links {
+  display: flex;
+  flex: 2;
+  justify-content: flex-end;
+  margin-right: 30px;
+}
+
+.nav-links a {
+  margin: 0 5px;
+  padding: 10px 10px;
+  text-decoration: none;
+  color: #fff;
+  font-weight: 600;
+  transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+
+.nav-links a:hover {
+  color: #ffab00;
+  transform: scale(1.1);
+}
+
+.permission-indicator {
+  color: #fff;
+  background-color: #5aac44;
+  padding: 10px 20px;
+  border-radius: 3px;
+  margin-left: 10px;
+  font-weight: 600;
+  display: inline-block;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+  font-size: 14px; /* Certificando que a fonte é a mesma dos outros botões */
+}
+
+.permission-indicator .view {
+  background-color: #ff9800; /* Cor para "Visualizar" */
+}
+
+.permission-indicator .edit {
+  background-color: #5aac44; /* Cor para "Editar" */
+}
+
+.permission-indicator:hover {
+  background-color: #519839; /* Cor para o hover */
+}
+
+
+
+
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(-20px);
   }
-  
-  nav.scrolled {
-    background-color: #024a7f;
+  to {
+    opacity: 1;
+    transform: translateY(0);
   }
-  
-  .logo {
-    flex: 1;
-    margin-right: 10px;
-    text-align: left; /* Garantir que o título fique no canto esquerdo */
+}
+
+@keyframes bounce {
+  from {
+    transform: translateX(0);
   }
-  
-  .logo h1 {
-    color: #fff;
-    font-size: 2em; /* Aumentar o tamanho da fonte para chamar atenção */
-    font-weight: bold; /* Tornar o título mais destacado */
-    margin: 0;
-    transition: transform 0.3s ease-in-out;
-    animation: fadeIn 2s ease-in-out, bounce 2s ease-in-out infinite alternate;
+  to {
+    transform: translateX(10px);
   }
-  
+}
+
+nav {
+  animation: slideIn 0.5s ease-in-out;
+}
+
+@media (max-width: 1024px) {
   .nav-links {
-    display: flex;
-    flex: 2;
-    justify-content: flex-end; /* Alinhar os links à direita */
-    margin-right: 30px; /* Reduzir a margem à direita */
+    flex-direction: row;
+    justify-content: center;
   }
-  
-  
+
   .nav-links a {
-    margin: 0 5px;
-    padding: 10px 10px;
-    text-decoration: none;
-    color: #fff;
-    font-weight: 600;
-    transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
+    margin: 5px;
   }
-  
-  .nav-links a:hover {
-    color: #ffab00;
-    transform: scale(1.1);
+}
+
+@media (max-width: 768px) {
+  .nav-links {
+    flex-direction: column;
+    align-items: center;
   }
-  
-  @keyframes fadeIn {
-    from {
-      opacity: 0;
-      transform: translateY(-20px);
-    }
-    to {
-      opacity: 1;
-      transform: translateY(0);
-    }
+
+  .nav-links a {
+    margin: 5px 0;
+    padding: 10px 20px;
+    font-size: 1em;
   }
-  
-  @keyframes bounce {
-    from {
-      transform: translateX(0);
-    }
-    to {
-      transform: translateX(10px);
-    }
-  }
-  
-  nav {
-    animation: slideIn 0.5s ease-in-out;
-  }
-  
-  /* Media queries para responsividade */
-  @media (max-width: 1024px) {
-    .nav-links {
-      flex-direction: row;
-      justify-content: center; /* Centralizar os links em telas menores */
-    }
-  
-    .nav-links a {
-      margin: 5px;
-    }
-  }
-  
-  @media (max-width: 768px) {
-    .nav-links {
-      flex-direction: column;
-      align-items: center;
-    }
-  
-    .nav-links a {
-      margin: 5px 0;
-      padding: 10px 20px;
-      font-size: 1em;
-    }
-  }
-  
+}
